[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "System URI API library"
documentation = "https://docs.rs/system_uri"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "system_uri"
readme = "README.md"
repository = "https://github.com/maidsafe/system_uri"
version = "0.4.0"
edition = "2018"

[dependencies]
quick-error = "~1.2.2"
ffi_utils = {version = "0.17.0",optional = true }
libc  = { version = "0.2.171", optional = true }


[dev-dependencies]
rand = "~0.3.18"
unwrap = "~1.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
winapi = "0.3.9"


[target.'cfg(target_os = "linux")'.dependencies]
xdg-basedir = "~1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.171"
[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
name = "system_uri"

[features]
default = ["ffi"]
ffi = ["libc","ffi_utils"]
ffi_utils = ["dep:ffi_utils"]
